--- a/day5-6/css/main.css
+++ b/day5-6/css/main.css
@@ -52,15 +52,16 @@
     gap: 10px;
     flex-wrap: wrap;
     background: #131921;
-
-    
-    
-    
+    background: whitesmoke;
 
     #navSection1{
         width: 20%;
         text-align: center;
+        img{
 
+            border-radius: 10px;
+            overflow: hidden;
+        }
     }
 
     
@@ -75,14 +76,21 @@
         border-radius: 10px;
         overflow: hidden;
         padding: 0px 5px 0px 10px ;
+        transition: 200ms ;
+
+        &:hover{
+                box-shadow: 0px 0px 8px 2px black;
+            }
         
         #innerNav{
             border: none;
             outline: none;
             width: fit-content;
             /* flex-shrink: 1; */
-            
         }
+
+
+
         #searchbar{
             flex-grow: 1;
             border: none;
@@ -100,6 +108,7 @@
                 border: none;
                 outline: none;
             }
+            
         }
     }
     #navItem{
@@ -117,11 +126,31 @@
         padding: 0px 20px;
         gap: 50px;
         margin-right: 20px;
-        #cart,#account{
+        #cart,#account,#wishList{
             height: 20%;
             width: 20%;
             cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            transition: 200ms ;
+                
+            :hover{
+                filter: drop-shadow(0 0 0.75rem aqua);
+            }
         }
+
+        #wishList{
+            transition: 200ms ;
+                
+            :hover{
+                filter: drop-shadow(0 0 0.75rem crimson);
+            }
+        }
+
+
+
     }
     
     
@@ -130,11 +159,6 @@
     border-bottom : 1px solid black ;
     padding: 10px;
 }
-
-
-
-
-
 
 
 
