--- a/day5-6/css/categoryShowing.css
+++ b/day5-6/css/categoryShowing.css
@@ -36,28 +36,48 @@
 	border-radius: 20px;
 	padding:10px;
 	gap: 20px;
-	max-width: 400px;
+	/* max-width: 400px; */
+	max-width: 300px;
+	overflow: hidden;
 	color: #ccc;
 	text-decoration: none;
-	transition: background-color 0.3s ease;
+	transition: 100ms ease-in;
 	text-wrap-mode:wrap ;
+	&:hover{
+		box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;	
+	}
+
+	
+	
+	
 }
 
 .category-card img {
-	aspect-ratio: 2/1.1;
+	aspect-ratio: 2/1.2;
 	object-fit: fill;
-	max-height: 150px;
+	max-height: 200px;
 	max-width: 90vh;
+	border-radius: 15px 15px 0 0 ;
+	transition: 200ms ease-in-out;
+	background: white;
+	&:hover{
+		/* aspect-ratio: 1/2; */
+		scale: 1.1;
+	}
+
 }
 
-.category-card span
- {
-	
+.category-card h5
+{
+
+	font-size: 1rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	text-wrap-mode: wrap;
+	text-wrap-mode:wrap;
+	text-wrap-style: pretty;
+
 	flex-wrap: wrap;
 	text-align: center;
 	margin: 0;
