--- a/day5-6/css/home.css
+++ b/day5-6/css/home.css
@@ -14,6 +14,25 @@
 	padding: 40px 0px;
 }
 
+.ShopNowButton{
+	border:1px solid white;
+	background: transparent;
+	color: white;
+	 border-radius: 6px;
+	 position: absolute;
+	 left: 85%;
+	 bottom: 20%;
+	 padding:15px 20px;
+	 background: rgba(0, 0, 0, 0.493);
+	 margin-top: 30px;
+	 transition: 300ms ease-in-out;
+	 font-size: 25px;
+	 &:hover{
+		transform: scale(1.1);
+		box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+		color: rgb(64, 255, 255);
+	 }
+}
 
 #heroBannerSection{
     flex-grow: 1;
