--- a/day5-6/css/main.css
+++ b/day5-6/css/main.css
@@ -45,20 +45,24 @@
 
 #mainNav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 10px 10px;
     width: 100%;
-    gap: 10px;
+    gap: 20px;
     flex-wrap: wrap;
     background: #131921;
     background: whitesmoke;
+    &>section{
+        flex-grow: 1;
+    }
 
     #navSection1{
-        width: 20%;
+        
+        width: 15%;
         text-align: center;
         img{
-
+            object-fit: cover;
             border-radius: 10px;
             overflow: hidden;
         }
@@ -69,11 +73,10 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        border: 1px solid black;
+        border: 1px solid #3BB77E;
         flex-wrap: wrap;
         width: fit-content;
         background: white;
-        border-radius: 10px;
         overflow: hidden;
         padding: 0px 5px 0px 10px ;
         transition: 200ms ;
@@ -92,6 +95,7 @@
 
 
         #searchbar{
+            justify-content: space-between;
             flex-grow: 1;
             border: none;
             background: white;
@@ -123,8 +127,10 @@
 
     #navSection3{
         display: flex;
+        justify-content: flex-end;
+        align-items: center;
         padding: 0px 20px;
-        gap: 50px;
+        gap: 20px;
         margin-right: 20px;
         #cart,#account,#wishList{
             height: 20%;
